--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
+    "postcss-color-mod-function": "^3.0.3",
     "postcss-preset-env": "^6.4.0"
   },
+  
   "postcss": {
     "plugins": {
       "postcss-preset-env": {
         "stage": 0
+      },
+      "postcss-color-mod-function" : {
+  
       }
     }
   }
